# lilypad

./: .cvsignore  .gitignore  ChangeLog  ClickEdit.py  Credits.html  Cs.rc  Da.rc  De.rc  En.rc  Es.rc  Fi.rc  Fr.rc  Hu.rc  It.rc  Ja.rc  LilyPond.py  Make.rules.in  Makefile.in  Nl.rc  Pl.rc  ProcessLog.py  Pt.rc  README  Ru.rc  Si.rc  Sk.rc  Sw.rc  Th.rc  URLHandlerClass.py  Wa.rc  Welcome-to-LilyPond-MacOS.ly  Zh.rc  autogen.sh  configure.in  dialog.c  dialog.h  license.c  license.h  lilycall.py  lilypad-0.0.0-1.patch  (+7 more)
MainMenu.nib/: classes.nib  info.nib  keyedobjects.nib
ProcessLog.nib/: info.nib  keyedobjects.nib
TinyTinyDocument.nib/: classes.nib  info.nib  keyedobjects.nib
macosx/: Credits.html  LilyPond.py  ProcessLog.py  README  URLHandlerClass.py  VERSION  Welcome-to-LilyPond-MacOS.ly  setup.py
misc/: ChangeLog
windows/: .gitignore  Cs.rc  Da.rc  De.rc  En.rc  Es.rc  Fi.rc  Fr.rc  Hu.rc  It.rc  Ja.rc  Make.rules.in  Makefile.in  Makeprog.rules.in  Nl.rc  Pl.rc  Pt.rc  Ru.rc  Si.rc  Sk.rc  Sw.rc  Th.rc  Wa.rc  Zh.rc  configure.in  convert.c  convert.h  dialog.c  dialog.h  lilypad.manifest  lilypad_res.h  main.c  main.h  pmdpi.c  pmdpi.h  rsrc.rc
windows/misc/: lilypad-0.0.1-1.patch
